first draft BEM

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 </head>
 
 <body>
-    <div class="calculator">
-        <div class="calc-body"></div>
-        <output class="output"></output>
-        <button id="numberOne"><input type="image" src="images/1.jpg"></button>
-        <button id="numberTwo"><input type="image" src="images/2.jpg"></button>
-        <button id="numberThree"><input type="image" src="images/3.jpg"></button>
-        <button id="numberFour"><input type="image" src="images/4.jpg"></button>
-        <button id="numberFive"><input type="image" src="images/5.jpg"></button>
-        <button id="numberSix"><input type="image" src="images/6.jpg"></button>
-        <button id="numberSeven"><input type="image" src="images/7.jpg"></button>
-        <button id="numberEight"><input type="image" src="images/8.jpg"></button>
-        <button id="numberNine"><input type="image" src="images/9.jpg"></button>
-        <button id="plus"><input type="image" src="images/plus.jpg"></button>
-        <button id="minus"><input type="image" src="images/minus.jpg"></button>
-        <button id="multiply"><input type="image" src="images/multy.jpg"></button>
-        <button id="divide"><input type="image" src="images/div.jpg"></button>
-        <button id="BackSpace"><input type="image" src="images/back.jpg" class="back-img"></button>
-        <button id="Equil"><input type="image" src="images/equil.jpg"></button>
+    <div class="calc">
+        <div class="calc__body"></div>
+        <output class="calc__output"></output>
+        <button class="calc__button calc__number-one" id="numberOne"><input type="image" src="images/1.jpg"></button>
+        <button class="calc__button calc__number-two" id="numberTwo"><input type="image" src="images/2.jpg"></button>
+        <button class="calc__button calc__number-three"cid="numberThree"><input type="image" src="images/3.jpg"></button>
+        <button class="calc__button calc__number-four"cid="numberFour"><input type="image" src="images/4.jpg"></button>
+        <button class="calc__button calc__number-five" id="numberFive"><input type="image" src="images/5.jpg"></button>
+        <button class="calc__button calc__number-six" id="numberSix"><input type="image" src="images/6.jpg"></button>
+        <button class="calc__button calc__number-seven" id="numberSeven"><input type="image" src="images/7.jpg"></button>
+        <button class="calc__button calc__number-eight" id="numberEight"><input type="image" src="images/8.jpg"></button>
+        <button class="calc__button calc__number-nine" id="numberNine"><input type="image" src="images/9.jpg"></button>
+        <button class="calc__button calc__plus" id="plus"><input type="image" src="images/plus.jpg"></button>
+        <button class="calc__button calc__minus" id="minus"><input type="image" src="images/minus.jpg"></button>
+        <button class="calc__button calc__multiply" id="multiply"><input type="image" src="images/multy.jpg"></button>
+        <button class="calc__button calc__divide" id="divide"><input type="image" src="images/div.jpg"></button>
+        <button class="calc__button calc__back-space" id="BackSpace"><input type="image" src="images/back.jpg" class="back-img"></button>
+        <button class="calc__button calc__equil" id="Equil"><input type="image" src="images/equil.jpg"></button>
     </div>
 
 </body>
