Created 1st ed. simple calculator. Worked only mouse

--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 <body>
     <div class="calc">
         <div class="calc__body"></div>
-        <output class="calc__output"></output>
-        <button class="calc__button calc__number-one" id="numberOne"><input type="image" src="images/1.jpg"></button>
-        <button class="calc__button calc__number-two" id="numberTwo"><input type="image" src="images/2.jpg"></button>
-        <button class="calc__button calc__number-three"cid="numberThree"><input type="image" src="images/3.jpg"></button>
-        <button class="calc__button calc__number-four"cid="numberFour"><input type="image" src="images/4.jpg"></button>
-        <button class="calc__button calc__number-five" id="numberFive"><input type="image" src="images/5.jpg"></button>
-        <button class="calc__button calc__number-six" id="numberSix"><input type="image" src="images/6.jpg"></button>
-        <button class="calc__button calc__number-seven" id="numberSeven"><input type="image" src="images/7.jpg"></button>
-        <button class="calc__button calc__number-eight" id="numberEight"><input type="image" src="images/8.jpg"></button>
-        <button class="calc__button calc__number-nine" id="numberNine"><input type="image" src="images/9.jpg"></button>
-        <button class="calc__button calc__plus" id="plus"><input type="image" src="images/plus.jpg"></button>
-        <button class="calc__button calc__minus" id="minus"><input type="image" src="images/minus.jpg"></button>
-        <button class="calc__button calc__multiply" id="multiply"><input type="image" src="images/multy.jpg"></button>
-        <button class="calc__button calc__divide" id="divide"><input type="image" src="images/div.jpg"></button>
-        <button class="calc__button calc__back-space" id="BackSpace"><input type="image" src="images/back.jpg" class="back-img"></button>
-        <button class="calc__button calc__equil" id="Equil"><input type="image" src="images/equil.jpg"></button>
+        <output class="calc__output">0</output>
+        <button class="calc__button calc__number-one  " data-num="1">1</button>
+        <button class="calc__button calc__number-two " data-num="2">2</button>
+        <button class="calc__button calc__number-three " data-num=3>3</button>
+        <button class="calc__button calc__number-four " data-num=4>4</button>
+        <button class="calc__button calc__number-five " data-num=5>5</button>
+        <button class="calc__button calc__number-six " data-num=5>6</button>
+        <button class="calc__button calc__number-seven " data-num=7>7</button>
+        <button class="calc__button calc__number-eight " data-num=8>8</button>
+        <button class="calc__button calc__number-nine " data-num=9>9</button>
+        <button class="calc__button calc__plus " data-op="+">+</button>
+        <button class="calc__button calc__minus " data-op="-">-</button>
+        <button class="calc__button calc__multiply " data-op="*">*</button>
+        <button class="calc__button calc__divide " data-op="/">/</button>
+        <button class="calc__button calc__null " data-num="0">0</button>
+        <button class="calc__button calc__equil" data-eq="">=</button>
+        <button class="calc__button clear">C</button>
     </div>
-
+    <script src="index.js"></script>
 </body>
 
 </html>
